[gd_scene load_steps=6 format=3 uid="uid://bdfsge52fwu1f"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_wxos3"]
[ext_resource type="FontFile" uid="uid://bwa8te7bl27gf" path="res://assets/fonts/nasin-nanpa-4.0.1.otf" id="1_y1pi3"]

[sub_resource type="LabelSettings" id="LabelSettings_psb0o"]
font_size = 28
outline_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_n3n70"]
font = ExtResource("1_y1pi3")
font_size = 81

[sub_resource type="LabelSettings" id="LabelSettings_mwkbb"]
font_size = 30

[node name="Card" type="CanvasLayer"]
script = ExtResource("1_wxos3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="SideIndicator" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Question:"
label_settings = SubResource("LabelSettings_psb0o")
horizontal_alignment = 1

[node name="SitelenPonaCard" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="SitelenPona" type="Label" parent="VBoxContainer/SitelenPonaCard"]
layout_mode = 2
text = "akesi"
label_settings = SubResource("LabelSettings_n3n70")
horizontal_alignment = 1

[node name="LatinCard" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Text" type="Label" parent="VBoxContainer/LatinCard"]
layout_mode = 2
text = "akesi"
label_settings = SubResource("LabelSettings_mwkbb")
horizontal_alignment = 1

[node name="SitelenLatinCard" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="SitelenPona" type="Label" parent="VBoxContainer/SitelenLatinCard"]
layout_mode = 2
text = "akesi"
label_settings = SubResource("LabelSettings_n3n70")
horizontal_alignment = 1

[node name="Text" type="Label" parent="VBoxContainer/SitelenLatinCard"]
layout_mode = 2
text = "akesi"
label_settings = SubResource("LabelSettings_mwkbb")
horizontal_alignment = 1

[node name="AnswerCard" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="SitelenPona" type="Label" parent="VBoxContainer/AnswerCard"]
layout_mode = 2
text = "akesi"
label_settings = SubResource("LabelSettings_n3n70")
horizontal_alignment = 1

[node name="Text" type="Label" parent="VBoxContainer/AnswerCard"]
layout_mode = 2
text = "akesi"
label_settings = SubResource("LabelSettings_mwkbb")
horizontal_alignment = 1

[node name="Meaning" type="Label" parent="VBoxContainer/AnswerCard"]
layout_mode = 2
text = "akesi"
label_settings = SubResource("LabelSettings_mwkbb")
horizontal_alignment = 1
autowrap_mode = 3
